# mrklkit

./: COPYING  README.md  configure.ac  do-it
src/: Makefile.am  builtin.c  builtin_private.h  builtingen.c  diag.txt  dparser.c  dpexpr.c  dsource.c  fparser.c  fparser_private.h  gen-diag  lexpr.c  lparse.c  lparse.h  lruntime.c  ltype.c  ltype.h  ltypegen.c  mrklkit-config.c  mrklkit.c  mrklkit.h  sample.c  testrt.c  util.c
src/modules/: dparser.c  dsource.c  testrt.c
src/mrklkit/: builtin.h  dparser.h  dpexpr.h  dsource.h  fparser.h  lexpr.h  lparse.h  lruntime.h  ltype.h  ltypegen.h  module.h  mrklkit.h  sample.h  testrt.h  util.h
src/mrklkit/modules/: dparser.h  dsource.h  testrt.h
src/test/: Makefile.am  testdparser.c  testfoo.c  testfparser.c  testlk.c
test/: Makefile.am  testbytes.c  testdparser.c  testfoo.c  testfparser.c  testlk.c  testminmodule.c
